infra/k8s/gateway/gatewayclass.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: runguard-gc
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
